Bug 457333 - Regression: panel with the tab created by New Tab button is not activated
Summary: Regression: panel with the tab created by New Tab button is not activated
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-31 08:22 UTC by Nikita Melnichenko
Modified: 2022-08-08 22:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Melnichenko 2022-07-31 08:22:33 UTC
If you press New Tab button on inactive panel, the new tab is created on the panel but the panel is not activated. In this case quick browsing shortcuts (arrows) and filtering will be applied to the tab of the active panel instead of the new tab. It worked well in the stable, but is broken in master now.
Comment 1 Toni Asensi Esteve 2022-07-31 21:01:18 UTC
It seems to be solved adding a line (https://invent.kde.org/utilities/krusader/-/merge_requests/91).
Comment 2 Bug Janitor Service 2022-07-31 21:04:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/91
Comment 3 Toni Asensi Esteve 2022-08-08 22:16:28 UTC
Git commit a96bfe0793e9b2d347922ccc1683638a1b116410 by Toni Asensi Esteve.
Committed on 08/08/2022 at 22:15.
Pushed by asensi into branch 'master'.

Activate the inactive panel when its Open a New Tab button is pressed

FIXED: [ 457333 ] Regression: panel with the tab created by New Tab button is not activated

Revision: https://invent.kde.org/websites/krusader-org/-/merge_requests/91

M  +1    -0    krusader/panelmanager.cpp

https://invent.kde.org/utilities/krusader/commit/a96bfe0793e9b2d347922ccc1683638a1b116410