Activate the inactive panel when its Open a New Tab button is pressed

FIXED: [ 457333 ] Regression: panel with the tab created by New Tab button is not activated
BUG: 457333

Revision: https://invent.kde.org/websites/krusader-org/-/merge_requests/91